# shapley_allocations

./: .gitignore  README.md  pyproject.toml  results.csv  shap_alloc.ipynb  texas7k_2020_gen_to_zone.csv  texas7k_cluster.csv
shapley_allocations/: main.py
shapley_allocations/shapley/: char_funcs.py  shapley.py
shapley_allocations/utils/: utils.py
src/: main.py
src/shapley/: shapley.py
src/utils/: utils.py
tests/: test_asset_id.csv  test_example.py  test_gen_bau_scen.csv  test_gen_cohort.csv  test_gen_df.csv  test_shap_alloc.csv  test_tail_sims.csv  test_tail_sims.xls
tests/scenarios/: scen_1000.csv  scen_1001.csv  scen_1002.csv  scen_1003.csv  scen_1004.csv
